objects/Module_Configuration__c.object
<CustomObject>
    <description>This object stores an Module configuration whose only element is the Module item. 
This will be the associated with the master configuration and related inverters/monitoring via junction objects. 
This is being used in Cash ordering and Lease/Loan.
Release WW 22 - 2016</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Type__c</fullName>
        <description>The type of electrical current of the module. DC/AC
Release WW22 - 2016</description>
        <label>Current Type</label>
        <picklist>
            <picklistValues>
                <fullName>DC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Item lookup field to Oracle Item Id of one module
Release WW22 - 2016</description>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Module Configurations</relationshipLabel>
        <relationshipName>Module_Configurations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Module Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Item__c</columns>
        <columns>Current_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Module Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Module Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>